- fixed some of the tables missing content - added a loading icon that responds to each ajax call - fixed a bug where some of the image mappings were not working - fixed a bug where image dimensions specified by the user was being ignored(all images regardless of user defined size were being resized according to the new code) - previous button now works for the slider (end condition not implemented yet --> meaning it still breaks in page below 1 and next to end page)

--- a/css/MsmDisplay.css
+++ b/css/MsmDisplay.css
@@ -166,6 +166,12 @@ div.controller{
     margin-top: 0px;
 }
 
+#features table
+{
+    margin-left:auto;
+    margin-right:auto;
+}
+
 .hottag
 {
     color: #229C79;   
@@ -375,6 +381,8 @@ table.matharray
 div.dialogs{
    margin: 0;
    display: none;
+   max-width: 605 !important;
+   min-width: 300 !important;
 }
 
 .comment
@@ -610,4 +618,26 @@ span.showmetitle
     font-weight: bold;
     color: white;
     float: right;   
+}
+
+.loadingscreen {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .3 ) 
+               url('../pix/ajax-loader.gif')
+                50% 50% 
+                no-repeat;
+}
+
+body.loading {
+    overflow: hidden;   
+}
+
+body.loading {
+    overflow: hidden;   
 }
